# sudoku42

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.linux.txt  CMakeListsMac.txt  GUIsudoku.cpp  README.md  sample.rc  sudoku.cpp  sudoku.h
icon/: icon.afdesign
icons/: AppIcon.xpm
legacy/: CMakeListsWin.txt  main.cpp
src/: GUIsudoku.cpp  sudoku.cpp
sudoku42.app/Contents/: Info.plist
sudoku42.app/Contents/MacOS/: sudoku42
sudokus/: sudoku1.s42
test/: CMakeCache.txt  CMakeLists.txt  main.cpp  sudoku.cpp  sudoku.py
